--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ body{
     right: 25%;
     top: 3px;
 }
+.mobile{
+    display: none;
+}
 .navb__menu{
     display: flex;
     list-style: none;
@@ -38,6 +41,25 @@ body{
     font-size: 18px;
     font-weight: 500;
     color: #333333;
+    cursor: pointer;
+    position:relative;
+}
+.navb__menu li::after{
+    content: "";
+    height: 1px;
+    width: 0;
+    margin: 0 auto;
+    background-color: #4856DF;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: 300ms ease-in-out;
+
+}
+.navb__menu li:hover::after{
+    width: 100%;
+
 }
 .navb__menu li:last-of-type{
     color: #4856DF;
@@ -112,6 +134,8 @@ body{
 }
 .get2 a{
     transform: translateY(-12px);
+    text-decoration: none;
+    color: inherit;
 }
 
 
@@ -131,6 +155,7 @@ body{
 .card{
     background-color: #fff;
     border-radius: 8px;
+    border: 1px solid #DFDFDF;
 }
 .card > *{
     padding: 1rem 2rem;
@@ -146,3 +171,53 @@ body{
 }
 
 /* grid */
+
+@media (max-width:748px){
+    .navbar{
+
+        padding: 2rem 1.5rem;
+    }
+    .desktop{
+        display: none;
+    }
+    .mobile{
+        display: flex;
+        transform: translateY(-4px);
+    }
+    .hero{
+        grid-template-columns: 1fr;
+        grid-auto-flow: dense
+    }
+    .left{
+        grid-row: 2;
+    }
+    .right{
+        grid-row: 1;
+    }
+    .right img{
+        width: 100%;
+    }
+    .left h1{
+        text-align: center;
+    }
+    .left h1{
+        font-size: 3rem;
+        line-height: 3.688rem;
+        padding-right: 0;
+        position: relative;
+        padding: 1.5rem 0;
+    }
+    .left h1::after{
+
+        left: 155px;
+    }
+    .left p{
+        color: #333;
+        width: 30ch;
+        font-size: 18px;
+        padding: 1.5rem 0 1.5rem 0;
+    }
+    .btns{
+        padding-bottom: 2rem;
+    }
+}
